# Engine

./: .gitignore  CMakeLists.txt
dependencies/include/glad/: glad.c  glad.h
src/: InputHandler.cpp  InputHandler.h  ResourceManager.cpp  ResourceManager.h  VertexArray.cpp  VertexArray.h  bitmask.cpp  bitmask.h  buffer.cpp  buffer.h  fragment.fs  game.cpp  game.h  glad.c  input_handler.cpp  input_handler.h  main.cpp  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  vertex_array.cpp  vertex_array.h  window.cpp  window.h
src/Core/: Application.cpp  Application.h
src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h
src/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h
src/Shaders/: default.fs  default.vs  flicker.fs
src/events/: EventManager.cpp  EventManager.h  KeyEvent.h  MouseEvent.h  WindowEvent.h  event.h  event_manager.cpp  event_manager.h  key_event.h  mouse_event.h  window_event.cpp  window_event.h
src/shaders/: fragment.fs  vertex.vs
